# backend/docs/swagger.yaml
@@ -8,17 +8,17 @@ definitions:
     properties:
       body:
         type: string
-      createdAt:
+      created_at:
         type: string
-      deletedAt:
+      deleted_at:
         type: string
       id:
         type: integer
       title:
         type: string
-      updatedAt:
+      update_at:
         type: string
-      userId:
+      user_id:
         type: integer
     type: object
 info:
@@ -56,6 +56,37 @@ paths:
       tags:
       - post
   /posts/{postId}:
+    delete:
+      consumes:
+      - application/json
+      description: delete post by id
+      operationId: delete-post-by-id
+      parameters:
+      - description: Post ID デフォルトで1から2までしかデータがありません。
+        in: path
+        name: postId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: 不正なpostID
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "404":
+          description: ポストが見つからない
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+      summary: delete post by id
+      tags:
+      - post
     get:
       consumes:
       - application/json
