# backend/internal/controllers/post_controller.go
@@ -2,12 +2,14 @@ package controllers
 
 import (
 	"errors"
-	"github.com/gin-gonic/gin"
 	"myapp/internal/entities"
 	"myapp/internal/repositories"
 	"myapp/internal/usecases"
+	"net/http"
 	"strconv"
 	"time"
+
+	"github.com/gin-gonic/gin"
 )
 
 // swaggo用の型定義
@@ -87,5 +89,36 @@ func PostDetail(ctx *gin.Context) {
 		ctx.JSON(200, result)
 	} else {
 		handleError(ctx, 404, errors.New("not found"))
+	}
+}
+
+
+// PostDelete godoc
+// @Summary delete post by id
+// @Description delete post by id
+// @ID delete-post-by-id
+// @Tags post
+// @Accept  json
+// @Produce  json
+// @Param postId path int true "Post ID デフォルトで1から2までしかデータがありません。"
+// @Success 200
+// @Failure 400 {object} ErrorResponse "不正なpostID"
+// @Failure 404 {object} ErrorResponse "ポストが見つからない"
+// @Failure 500 {object} ErrorResponse "Internal Server Error"
+// @Router /posts/{postId} [delete]
+func PostDelete(ctx *gin.Context) {
+	sid := ctx.Param("postId")
+	id, err := strconv.Atoi(sid)
+	if err != nil {
+		handleError(ctx, 500, err)
+	}
+
+	repository := repositories.NewPostRepository(DB(ctx))
+	usecase := usecases.NewPostUsecase(repository)
+	err = usecase.Delete(id)
+	if err != nil {
+		handleError(ctx, 500, err)
+	} else {
+		ctx.Status(http.StatusOK)
 	}
 }
